# The_Neon_Project

./: .gitignore  CMakeLists.txt
assets/levels/: lvl.ppm  lvl.txt  map.ppm  test.ppm
assets/models/: graou.blend
glimac/: CMakeLists.txt
glimac/include/glimac/: Cube.hpp  FreeflyCamera.hpp  Model.hpp  OBJMesh.hpp  Plane.hpp  Program.hpp  TrackballCamera.hpp  common.hpp  glm.hpp
glimac/src/: Cube.cpp  FreeflyCamera.cpp  Model.cpp  OBJMesh.cpp  Plane.cpp  SDLWindowManager.cpp  TrackballCamera.cpp  tiny_obj_loader.cpp
include/: ennemi.h  ennemi.hpp  game_manager.hpp  inclusion.h  inclusion.hpp  objet.h  objet.hpp  player.h  player.hpp  tile_map.h  tile_map.hpp
shaders/: 3D.vs.glsl  multiTex3D.fs.glsl  normals.fs.glsl  tex3D.fs.glsl
src/: ennemi.cpp  game_manager.cpp  main.cpp  objet.cpp  player.cpp  tile_map.cpp
